# StockAI

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  LICENSE  README.md  collab.md  pyproject.toml
app/: __init__.py
app/api/: main.py
app/integrations/: ta_kis_patch.py  ta_runner.py
app/integrations/ta_dataflows/: kis_api.py  kis_config.py  news_korean.py
app/kis/: account.py  auth.py  config.py  credentials.py  exceptions.py  futures.py  http.py  models.py  order_domestic.py  order_overseas.py  quote_domestic.py  quote_overseas.py  rate_limiter.py  secrets_loader.py  ticker_master.py  tr_id_table.py  utils_paths.py  websocket.py
app/ui/: components.py  streamlit_app.py
app/ui/pages/: ai_analysis.py  domestic_trade.py  (+3 more)
app/utils/: logging.py  ticker.py
kb/artifacts/: task-001-summary.md  task-002-summary.md  task-003-summary.md  task-004-summary.md  task-005-summary.md  task-006-summary.md  task-008-summary.md
kb/concepts/: architecture.md
kb/index/: README.md  status.md
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/test/: widget_test.dart
runtime/: claude-implement.ps1  claude-implement.sh  codex-design.ps1  codex-design.sh
scripts/: build_apk.ps1  install_apk.ps1  migrate_secrets.ps1  run.ps1  setup.ps1  smoke_market_hours.ps1  start_api.ps1  start_tunnel.ps1  test.ps1
templates/: artifact-summary.md  implementation-notes.md
tests/: smoke_kis_mock.py  test_kis_credentials.py  test_kis_rate_limiter.py  test_kis_secrets_loader.py  test_kis_tr_id_table.py  test_news_korean.py  test_ta_kis_adapter.py  test_websocket_parse.py
(+26 files in other folders)
